<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/show_ad_layout"
    tools:context=".activities.ShowAdvertisementDetails">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/Terms_Of_Use"
            android:layout_height="50dp"
            android:background="@color/black"
            app:title="@string/terms_of_use"

            >



        </androidx.appcompat.widget.Toolbar>


        <include
            android:id="@+id/terms_bottom_nav_bar"
            layout="@layout/bottom_nav_bar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/terms_bottom_nav_bar"
            android:layout_below="@id/Terms_Of_Use">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/icon_home_click"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/icon_homeclick"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/comfort_regular"
                        android:text="@string/home_click"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Start"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/comfort_regular"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="ObsoleteLayoutParam" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Start"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comfort_regular"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Start"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="20dp"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/comfort_regular"
                    android:text="@string/Terms_of_use"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam" />







                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Start"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comfort_regular"
                    android:text="@string/ToLet"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam" />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Start"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comfort_regular"
                    android:text="@string/policy"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam"
                    android:layout_marginBottom="30dp"/>



            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>