<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FFFFFF"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.profile_fragments.ProfileInfoFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/personal_info"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:padding="10dp"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:id="@+id/personal_info"
            android:fontFamily="@font/comfortaa_regular"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:text="@string/information_can_only_be_seen_by_members"
            android:layout_below="@+id/personal_info"
            />
        </RelativeLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/shape3"
        android:backgroundTint="@color/white">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="10dp"
            android:src="@drawable/icon_profile"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/full_name"
                android:textSize="15sp"
                android:fontFamily="@font/comfortaa_regular"
                android:textColor="@color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/profile_name_edit"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/full_name"
                android:textSize="15sp"
                android:fontFamily="@font/comfortaa_regular"
                android:textColor="@color/black"
                android:visibility="gone"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/shape3"
        android:backgroundTint="@color/white">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="10dp"
            android:src="@drawable/icon_email"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/shape3"
        android:backgroundTint="@color/white">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="10dp"
            android:src="@drawable/icon_phone"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:fontFamily="@font/comfortaa_regular"
                android:textSize="15sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/profile_phone_edit"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:enabled="false"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/phone_number"
                android:fontFamily="@font/comfortaa_regular"
                android:textColor="@color/black"
                android:visibility="gone"
                tools:ignore="Autofill,LabelFor,TextFields" />


        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp">

        <ImageButton
            android:id="@+id/edit_info"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/darker_lavender"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_edit"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/save_info"
        android:layout_width="60dp"
        android:layout_alignParentStart="true"
        android:layout_height="60dp"
        android:src="@drawable/icon_save"
        android:background="@drawable/circle"
        android:backgroundTint="@color/darker_lavender"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:focusable="false"
        android:clickable="false"
        tools:ignore="ContentDescription" />

    </RelativeLayout>


</LinearLayout>