<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FFFFFF"
    android:padding="10dp"
    tools:context=".activities.sign_in_fragments.SignUpFragment">

    <RelativeLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_sign_u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Full Name"
            android:textColorHint="@color/black"
            app:helperText="Required"
            app:helperTextTextColor="#F4364C"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape3"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_field_sign_u"
            android:layout_marginStart="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:hint="Email Address"
            android:textColorHint="@color/black"
            app:helperText="Required"
            app:helperTextTextColor="#F4364C"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/shape3"
                android:padding="10sp"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_field_sign_up"
            android:layout_marginStart="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:hint="Phone no"
            android:textColorHint="@color/black"
            app:helperText="Required"
            app:helperTextTextColor="#F4364C"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/shape3"
                android:padding="10sp"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/age_restriction"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="140sp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/age_18"
            android:textColor="@color/black" />


        <CheckBox
            android:id="@+id/policies"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_restriction"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="40sp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/terms"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sendNewSignUpLink"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_below="@+id/policies"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/shape3"
            android:backgroundTint="@color/darker_lavender"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/send_link_in_mail"
            android:textColor="@color/white" />


    </RelativeLayout>

</ScrollView>